reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_transform_array_input.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructWithTransformArray::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructWithTransformArray"
  },
  {
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithTransformArray",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::vec::Vec",
              "parameters": [
                {
                  "name": "u8"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::array::Array",
        "description": "Fixed-size Array",
        "parameters": [
          {
            "name": "T"
          },
          {
            "name": "N"
          }
        ],
        "fallback": {
          "name": "std::vec::Vec",
          "parameters": [
            {
              "name": "T"
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
