reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_transform_array_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructWithTransformArray::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::tests::basic::TestStructWithTransformArray",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::vec::Vec",
            "parameters": [
              {
                "name": "u8"
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::array::Array",
      "description": "Fixed-size Array",
      "parameters": [
        {
          "name": "T"
        },
        {
          "name": "N"
        }
      ],
      "fallback": {
        "name": "std::vec::Vec",
        "parameters": [
          {
            "name": "T"
          }
        ]
      }
    },
    {
      "kind": "primitive",
      "name": "std::vec::Vec",
      "description": "Expandable array type",
      "parameters": [
        {
          "name": "T"
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
