reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_transform_both-2.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_typescript_code::<TestStructWithTransformBoth>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflect-cli
//
// Schema name: 
// 




/// 8-bit unsigned integer
export type u8 = TODO;


export namespace reflect {

/// Struct object with no fields
export interface Empty {
    }


/// Error object which is expected to be never returned
export interface Infallible {
    }

}

export namespace reflect_demo {

export namespace tests {

export namespace basic {

export interface TestStructWithTransformBoth {
    _f: u8;
    }

}
}
}

export namespace std {

/// std::sync::Arc pointer type
export type Arc<T> = TODO;

}
