reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_transform_both_input.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructWithTransformBoth::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructWithTransformBoth"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithTransformBoth",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "u8"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::sync::Arc",
        "description": "std::sync::Arc pointer type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "fallback": {
          "name": "T"
        }
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
