reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_transform_both_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructWithTransformBoth::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::tests::basic::TestStructWithTransformBoth",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "u8"
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::sync::Arc",
      "description": "std::sync::Arc pointer type",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fallback": {
        "name": "T"
      }
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
